--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@types/node": "^20.12.12",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.0",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.11"
